--- a/algorytm/algor.tex
+++ b/algorytm/algor.tex
@@ -23,7 +23,7 @@
 \newcommand\tab[1][1cm]{\hspace*{#1}}
 
 \title[Nanozombie]{Nanozombie - algorytm}
-\author{Marcin Pastwa, Piotr Tomaszewski}
+\author{Marcin Pastwa 136779, Piotr Tomaszewski 136821}
 \date{}
 \begin{document}
 
@@ -34,12 +34,12 @@
 \section{Stałe, zmienne i struktury}
 
 \begin{frame}{QUEUE\_PONY}
-\internallinenumbers
+    \internallinenumbers
     \resetlinenumber[1]
     Kolejka procesów oczekujących na ACK\_PONY. \\
     Kolejka jest początkowo pusta. \\
     Do kolejki trafiają procesy, które ubiegają się o dostęp do sekcji krytycznej, gdy ten proces się w niej znajduje. Czyli turyści, którzy proszą go o zgodę na pobranie stroju kucyka, gdy ma on przy sobie taki strój. \\
-    Kolejka nie zawiera duplikatów - proces wpisany do niej kilkukrotnie będzie widniał na niej tylko raz.
+    Kolejka nie zawiera duplikatów - proces wpisany do niej kilkukrotnie będzie widniał na niej tylko raz. \\
     Po wyjściu z sekcji krytycznej (po zwrocie stroju) do wszystkich procesów z kolejki wysyłane jest ACK\_PONY, kolejka jest następnie czyszczona.
 \end{frame}
 
@@ -47,16 +47,16 @@
     \internallinenumbers
     \resetlinenumber[1]
     Każdy proces posiada po jednej kolejce dla każdej łodzi podwodnej.
-    W kolejce znajdują się procesy ubiegające się o miejsce na niej.
+    W kolejce znajdują się procesy ubiegające się o miejsce na danej łodzi.
 
     \vspace{0.2cm}
     Wartość ujęta w nawiasy klamrowe oznacza, że mówimy o kolejce powiązanej z łodzią o danym indentyfikatorze.
 
     \vspace{0.2cm}
-    Dzięki kolejce można wyznaczyć, które procesy mogą zająć miejsce na danej łodzi podwodnej (znaleźć się w strefie krytycznej).
+    Dzięki kolejce można wyznaczyć, które procesy mogą zająć miejsce na danej łodzi podwodnej (znaleźć się w sekcji krytycznej).
 
     \vspace{0.2cm}
-    Kolejka wypełniana jest zgodnie z algorytmem Lamporta, z tą różnicą, że w sekcji krytycznej na raz może znajdować się >1 proces. Dokładniej, proces, który otrzymał wszystkie potwierdzenia i w kolejce ma pozycję ``$i$'', może zająć miejsce (wejść do strefy krytycznej), jeśli suma rozmiarów procesów na pozycjach $<=$``$i$'' jest $<=$ maksymalnej pojemności danej łodzi.
+    Kolejka wypełniana jest zgodnie z algorytmem Lamporta, z tą różnicą, że w sekcji krytycznej w danym momencie może znajdować się >1 proces. Dokładniej, proces, który otrzymał wszystkie potwierdzenia, może zająć miejsce (wejść do sekcji krytycznej), jeśli suma rozmiaru jego i procesów, które są przed nim w kolejce nie przekracza maksymalnej pojemności danej łodzi.
 \end{frame}
 
 \begin{frame}{TRY\_NO i MAX\_TRY\_NO}
@@ -70,7 +70,7 @@
 \begin{frame}{LIST\_SUBMAR}
     \internallinenumbers
     \resetlinenumber[1]
-    Lista, w której proces przechowuje informację o każdej łodzi podwodnej, czy jego zdaniem znajduje się ona teraz w porcie, niezapełniona, czy też nie. \\
+    Lista, w której proces przechowuje informację o każdej łodzi podwodnej, czy jego zdaniem znajduje się ona teraz w porcie, i nie jest pełna, czy też nie. \\
     Proces preferuje wybór łodzi o najmniejszym stopniu zapełnienia. Wyznaczanie zapełnienia jest złożone obliczeniowo, dlatego jako pewien rodzaj heurystyki przyjmujemy, że proces rozważa tylko te łodzie, które (według jego obecnej wiedzy) stoją w porcie i są niezapełnione. 
     Jak zostało to już podkreślone, zawartość tej listy może być nieaktualna. Nie spowoduje to jednak błędów. W najgorszym wypadku, proces ustawi się w kolejce do łodzi, która odpłynęła i będzie musiał się z niej wycofać i wybrać inną. Jednak, ten problem występuje niezależnie od tego, czy wykorzystamy tę listę, czy nie. Próba uniknięcia tego zjawiska wiązałaby się z ograniczeniem współbieżności.
 \end{frame}
@@ -98,6 +98,8 @@
 
 
 \begin{frame}{Pozostałe stałe i zmienne}
+    \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
         \item [PONY\_NO] Łączna liczba dostępnych strojów kucyka (stała).
         \item [TOURIST\_NO] Łączna liczba turystów (stała).
@@ -108,7 +110,7 @@
 \end{frame}
 
 \section{Wiadomości}
-\begin{frame}{Znacznik Lamporta (Timestamp)}
+\begin{frame}{Zegar Lamporta (Timestamp)}
     \internallinenumbers
     \resetlinenumber[1]
     Do każdej wiadomości dołączany jest znacznik czasowy (timestamp) modyfikowany zgodnie z zasadami zegara logicznego Lamporta.
@@ -120,19 +122,20 @@
     \textbf{W nawiasach klamrowych znajdują się parametry dołączane do wiadomości. }
     \begin{description}
         \item [REQ\_PONY] żądanie dostępu do sekcji krytycznej (żądanie dostępu do stroju kucyka).
-        \item [ACK\_PONY] potwierdzenie dostępu do stroju kucyka.
+        \item [ACK\_PONY] zgoda na dostęp do stroju kucyka.
         \item [REQ\_SUBMAR\{id\_łodzi\}] żądanie dostępu do sekcji krytycznej (do miejsca na łodzi podwodnej).
-        \item [ACK\_SUBMAR\{id\_łodzi\}] potwierdzenie wpisania do kolejki do wskazanej łodzi.
+        \item [ACK\_SUBMAR] potwierdzenie wpisania nadawcy do odpowiedniej kolejki QUEUE\_SUBMAR.
         \item [FULL\_SUBMAR\_RETREAT\{id\_łodzi\}] wysyłane przez proces, któremu nie udało się wsiąść do łodzi, więc się z niej wycofuje.
     \end{description}
 \end{frame}
 
 \begin{frame}{Wiadomości c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
         \item [FULL\_SUBMAR\_STAY\{id\_łodzi\}] wysyłane przez proces, któremu nie udało się wsiąść do łodzi, ale poddaje się i zostaje w kolejce.
         \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] informacja, że łódź o podanym id i wioząca podaną liczbę pasażerów wróciła do portu. Dla procesów, które płynęły tą łodzią oznacza to rozkaz zwolnienia zasobów (opuszczenia jej), dla ogółu procesów, że można usunąć z kolejki podaną drugim parametrem liczbę procesów.
-        \item [TRAVEL\_READY] weryfikacja, czy można rozpocząć podróż łodzi podwodnej.
+        \item [TRAVEL\_READY] weryfikacja czy można rozpocząć podróż łodzi podwodnej.
         \item [ACK\_TRAVEL] odpowiedź na zapytania kapitana.
         \item [DEPART\_SUBMAR] informacja, że łódź, w której dany proces przebywa właśnie wypływa z portu.
     \end{description}
@@ -170,8 +173,8 @@
     \begin{description}
         \item [REQ\_PONY] odpowiada ACK\_PONY.
         \item [ACK\_PONY] niemożliwe, ignoruje.
-        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR\{id\_łodzi\}.
-        \item [ACK\_SUBMAR\{id\_łodzi\}] niemożliwe, ignoruje.
+        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR.
+        \item [ACK\_SUBMAR] niemożliwe, ignoruje.
         \item [FULL\_SUBMAR\_STAY\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta.
         \item [FULL\_SUBMAR\_RETREAT\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta oraz usuwa nadawcę z kolejki powiązanej z daną łodzią QUEUE\_SUBMAR\{id\_łodzi\}.
     \end{description}
@@ -179,8 +182,9 @@
 
 \begin{frame}{RESTING - odpowiedzi c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
-        \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki (QUEUE\_SUBMAR\{id\_łodzi\}).
+        \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki QUEUE\_SUBMAR\{id\_łodzi\}.
         \item [TRAVEL\_READY] niemożliwe, ignoruje.
         \item [ACK\_TRAVEL] niemożliwe, ignoruje.
         \item [DEPART\_SUBMAR] niemożliwe, ignoruje.
@@ -193,8 +197,8 @@
     Proces w tym stanie ubiega się o  możliwość zabrania stroju kucyka, czyli na dostęp do sekcji krytycznej.
 
     \vspace{0.4cm}
-    Ubieganie się o dostęp do sekcji krytycznej bazuje na algorytmie Ricarta - Agravali. Różnica polega na poszerzeniu sekcji krytycznej do liczby równej liczbie strojów kucyka (PONY\_NO). Zatem, proces może wejść do sekcji krytycznej (zabrać strój) po zebraniu co najmniej TOURIST\_NO - PONY\_NO odpowiedzi ACK\_PONY (różnica między liczbą procesów, a liczbą strojów). Zakładamy, że proces ma od razu jedno pozwolenie - swoje własne. \\
-    Po zebraniu minimalnej liczby pozwoleń, proces zajmuje zasoby (strój) i przechodzi do stanu GOT\_PONY.
+    Ubieganie się o dostęp do sekcji krytycznej bazuje na algorytmie Ricarta - Agravali. Różnica polega na poszerzeniu sekcji krytycznej do liczby procesów równej liczbie strojów kucyka (PONY\_NO). Zatem, proces może wejść do sekcji krytycznej (zabrać strój) po zebraniu co najmniej TOURIST\_NO - PONY\_NO odpowiedzi ACK\_PONY (różnica między liczbą procesów, a liczbą strojów). Zakładamy, że proces ma od razu jedno pozwolenie - swoje własne. \\
+    Po zebraniu minimalnej liczby pozwoleń proces zajmuje zasoby (strój) i przechodzi do stanu GOT\_PONY.
 \end{frame}
 
 \begin{frame}{WAIT\_PONY - odpowiedzi}
@@ -203,8 +207,8 @@
     \begin{description}
         \item [REQ\_PONY] jeśli otrzymana wiadomość ma niższy priorytet dodaje nadawcę do kolejki QUEUE\_PONY i nic nie odpowiada. W przeciwnym razie, uznaje pierwszeństwo i odpowiada ACK\_PONY.
         \item [ACK\_PONY] inkrementuje REC\_ACK\_NO, po zdobyciu wymaganej liczby przechodzi do stanu GOT\_PONY.
-        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR\{id\_łodzi\}.
-        \item [ACK\_SUBMAR\{id\_łodzi\}] niemożliwe, ignoruje.
+        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR.
+        \item [ACK\_SUBMAR] niemożliwe, ignoruje.
         \item [FULL\_SUBMAR\_STAY\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta.
 
     \end{description}
@@ -212,6 +216,7 @@
 
 \begin{frame}{WAIT\_PONY - odpowiedzi c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
         \item [FULL\_SUBMAR\_RETREAT\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta oraz usuwa nadawcę z kolejki powiązanej z daną łodzią (QUEUE\_SUBMAR\{id\_łodzi\}).
         \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki QUEUE\_SUBMAR\{id\_łodzi\}.
@@ -239,8 +244,8 @@
     \begin{description}
         \item [REQ\_PONY] proces jest w sekcji krytycznej, więc dodaje nadawcę do kolejki QUEUE\_PONY i nic nie odpowiada. 
         \item [ACK\_PONY] jest już w sekcji krytycznej, więc ignoruje.
-        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR\{id\_łodzi\}.
-        \item [ACK\_SUBMAR\{id\_łodzi\}] niemożliwe, ignoruje.
+        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR.
+        \item [ACK\_SUBMAR] niemożliwe, ignoruje.
         \item [FULL\_SUBMAR\_STAY\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta.
 
     \end{description}
@@ -248,6 +253,7 @@
 
 \begin{frame}{CHOOSE\_SUBMAR - odpowiedzi c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
         \item [FULL\_SUBMAR\_RETREAT\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta oraz usuwa nadawcę z kolejki powiązanej z daną łodzią (QUEUE\_SUBMAR\{id\_łodzi\}).
         \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki QUEUE\_SUBMAR\{id\_łodzi\}. Jeśli zawiesił się, bo nie znalazł łodzi, to ta wiadomość go budzi.
@@ -260,6 +266,7 @@
 
 \begin{frame}{Uwaga do algorytmu}
     \internallinenumbers
+    \resetlinenumber[1]
     Uwaga, w dalszej części algorytmu potrzebny będzie proces, który wyda sygnał do odpłynięcia i potem powrotu do portu łodzi podwodnej - będzie pełnił rolę kapitana. Turyści znajdujący się na łodzi mogliby, co prawda, wspólnie podejmować te decyzje. Jednak, wprowadziłoby to tylko konieczność przesłania dodatkowych wiadomości, bez poprawy współbieżności działania - procesy w tym czasie nic nie robią, czekają jedynie na zakończenie podróży. Dlatego, postanowiliśmy ponownie wykorzystać już zbudowaną kolejkę QUEUE\_SUBMAR\{id\_łodzi\}. Sygnał do odpłynięcia i powrotu wyda zatem proces, który zdobyłby dostęp do sekcji krytycznej w algorytmie Lamporta - pierwszy w kolejce.
 \end{frame}
 
@@ -270,12 +277,13 @@
 
     \vspace{0.4cm}
     Tym razem, ubieganie się o dostęp do sekcji krytycznej bazuje na algorytmie Lamporta. Proces czeka, aż otrzyma potwierdzenia od wszystkich pozostałych procesów. \\
-    Następnie, sprawdza czy może zająć miejsce na łodzi. Zająć miejsce na łodzi, może, jeśli suma rozmiarów jego i procesów znajdujących się przed nim w kolejce nie przekracza maksymalnej pojemności łodzi. Jeśli może, to zajmuje miejsca, przechodzi do stanu BOARDED.
+    Następnie, sprawdza czy może zająć miejsce na łodzi. Zająć miejsce na łodzi, może, jeśli suma rozmiarów jego i procesów znajdujących się przed nim w kolejce nie przekracza maksymalnej pojemności łodzi. Jeśli może, to zajmuje miejsca i przechodzi do stanu BOARDED.
 \end{frame}
 
 \begin{frame}{WAIT\_SUBMAR - c.d.}
     \internallinenumbers
-    Jeśli jednak się nie zmieści, inkrementuje licznik niepowodzeń (TRY\_NO) i sprawdza, czy nie przekroczył limitu (MAX\_TRY\_NO). Jeśli mieści się w limicie, usuwa się z kolejki, wysyła do pozostałych wiadomość FULL\_SUBMAR\_RETREAT\{id\_łodzi\} i wraca do stanu CHOOSE\_SUBMAR. Jeśli jednak przekroczył limit, poddaje się i postanawia czekać, aż łódź wróci z wyprawy. Wysyła więc do pozostałych wiadomość FULL\_SUBMAR\_STAY\{id\_łodzi\} i zawiesza się, do czasu, aż łódź wróci.
+    \resetlinenumber[1]
+    Jeśli jednak się nie zmieści, inkrementuje licznik niepowodzeń (TRY\_NO), oznacza łódź jako niedostępną i sprawdza, czy nie przekroczył limitu (MAX\_TRY\_NO). Jeśli mieści się w limicie, usuwa się z kolejki, wysyła do pozostałych wiadomość FULL\_SUBMAR\_RETREAT\{id\_łodzi\} i wraca do stanu CHOOSE\_SUBMAR. Jeśli jednak przekroczył limit, poddaje się i postanawia czekać, aż łódź wróci z wyprawy. Wysyła więc do pozostałych wiadomość FULL\_SUBMAR\_STAY\{id\_łodzi\} i zawiesza się, do czasu, aż łódź wróci.
 \end{frame}
 
 \begin{frame}{WAIT\_SUBMAR - odpowiedzi}
@@ -284,8 +292,8 @@
     \begin{description}
         \item [REQ\_PONY] proces jest w sekcji krytycznej, więc dodaje nadawcę do kolejki QUEUE\_PONY i nic nie odpowiada. 
         \item [ACK\_PONY] jest już w sekcji krytycznej, więc ignoruje.
-        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR\{id\_łodzi\}.
-        \item [ACK\_SUBMAR\{id\_łodzi\}] inkrementuje licznik zebranych potwierdzeń. Po zebraniu wszystkich sprawdza, czy może wejść do łodzi.
+        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR.
+        \item [ACK\_SUBMAR] inkrementuje licznik zebranych potwierdzeń. Po zebraniu wszystkich sprawdza, czy może wejść do łodzi.
         \item [FULL\_SUBMAR\_STAY\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta.
 
     \end{description}
@@ -293,6 +301,7 @@
 
 \begin{frame}{WAIT\_SUBMAR - odpowiedzi c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
         \item [FULL\_SUBMAR\_RETREAT\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta oraz usuwa nadawcę z kolejki powiązanej z daną łodzią (QUEUE\_SUBMAR\{id\_łodzi\}).
         \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki QUEUE\_SUBMAR\{id\_łodzi\}.
@@ -308,11 +317,12 @@
     Proces w tym stanie zajął miejsca w łodzi podwodnej i czeka na rozpoczęcie wyprawy.
 
     \vspace{0.4cm}
-    Jeśli proces został kapitanem czeka na otrzymanie wiadomości, że łódź jest pełna. Po otrzymaniu tej informacji, wyznacza na podstawie kolejki, które proesy z nim płyną i wysyła do każdego z nich zapytanie TRAVEL\_READY (ma ono na celu zweryfikowanie czy wszyscy już wsiedli), po czym czeka, aż każdy z nich mu odpowie ACK\_TRAVEL. Po otrzymaniu zgód wysyła do nich wiadomość DEPART\_SUBMAR, infomrując je, że wszyscy są gotowi i można wyruszać i ponownie czeka na potwierdzenie ACK\_TRAVEL. Po ich otrzymaniu przechodzi do stanu TRAVEL.
+    Jeśli proces został kapitanem czeka na otrzymanie wiadomości, że łódź jest pełna. Po otrzymaniu tej informacji, wyznacza na podstawie kolejki, które procesy z nim płyną i wysyła do każdego z nich zapytanie TRAVEL\_READY (ma ono na celu zweryfikowanie czy wszyscy już wsiedli), po czym czeka, aż każdy z nich mu odpowie ACK\_TRAVEL. Po otrzymaniu zgód wysyła do nich wiadomość DEPART\_SUBMAR, informując je, że wszyscy są gotowi i można wyruszać. Ponownie czeka na potwierdzenie ACK\_TRAVEL. Po ich otrzymaniu przechodzi do stanu TRAVEL.
 \end{frame}
 
 \begin{frame}{BOARDED - c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     Pozostałe procesy czekają na pytanie TRAVEL\_READY. Odpowiadają na nie ACK\_TRAVEL. Jeżeli to zapytanie uzyskał jeszcze w poprzednim stanie i nie zmienił w tym czasie łodzi, to teraz na nie odpowiada. \\
     Następnie proces czeka na DEPART\_SUBMAR. Po otrzymaniu wiadomości odpowiada ACK\_TRAVEL i przechodzi do stanu TRAVEL.
 \end{frame}
@@ -323,8 +333,8 @@
     \begin{description}
         \item [REQ\_PONY] proces jest w sekcji krytycznej, więc dodaje nadawcę do kolejki QUEUE\_PONY i nic nie odpowiada. 
         \item [ACK\_PONY] jest już w sekcji krytycznej, więc ignoruje.
-        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR\{id\_łodzi\}.
-        \item [ACK\_SUBMAR\{id\_łodzi\}] niemożliwe, ignoruje.
+        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR.
+        \item [ACK\_SUBMAR] niemożliwe, ignoruje.
         \item [FULL\_SUBMAR\_STAY\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta. Jeśli jest kapitanem tej łodzi rozpoczyna procedurę wypłynięcia.
 
     \end{description}
@@ -332,6 +342,7 @@
 
 \begin{frame}{BOARDED - odpowiedzi c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
         \item [FULL\_SUBMAR\_RETREAT\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta oraz usuwa nadawcę z kolejki powiązanej z daną łodzią (QUEUE\_SUBMAR\{id\_łodzi\}). Jeśli jest kapitanem tej łodzi rozpoczyna procedurę wypłynięcia.
         \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki QUEUE\_SUBMAR\{id\_łodzi\}.
@@ -347,13 +358,14 @@
     Ten stan symuluje podróż i zwiedzanie wyspy przez turystów.
 
     \vspace{0.4cm}
-    Jeśli proces został kapitanem czeka przez pewną, losową ilość czasu. Po tym czasie, uznajemy, że łódź zakończyła podróż i wróciła do brzegu. Chcemy, aby turyści, którzy przebywają w łodzi mogli z niej wysiąść, nim wsiądą do niej kolejni. Dlatego, kapitan najpierw wysyła wiadomość RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\} do procesów, które z nim płynęły. (Liczba pasażerów jest podana, ponieważ wyznaczanie, kto płynął łodzią wymaga obliczeń. Dzięki dodaniu tego parametru pozostałe procesy nie muszą już tego wyznaczać). \\
+    Jeśli proces został kapitanem czeka przez pewną, losową ilość czasu. Po tym czasie, uznajemy, że łódź zakończyła podróż i wróciła do brzegu. Chcemy, aby turyści, którzy przebywają w łodzi mogli z niej wysiąść, nim wsiądą do niej kolejni. Dlatego, kapitan najpierw wysyła wiadomość RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\} do procesów, które z nim płynęły. (Liczba pasażerów jest parametrem, ponieważ wyznaczanie, kto płynął łodzią wymaga obliczeń. Dzięki dodaniu tego parametru pozostałe procesy nie muszą już same tego wyznaczać). \\
     Kapitan zwalnia zasoby (miejsce na łodzi), usuwa z kolejki tyle procesów, ile było pasażerów i czeka, aż pozostali pasażerowie udzielą odpowiedzi ACK\_TRAVEL.
 \end{frame}
 
 \begin{frame}{TRAVEL - c.d.}
     \internallinenumbers
-    Po otrzymaniu potwierdzeń od współpasażerów kapitan wysyła RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\} do pozostałych procesesów (tym razem nie oczekując już na potwierdzenia). Po czym przechodzi do stanu ON\_SHORE.
+    \resetlinenumber[1]
+    Po otrzymaniu potwierdzeń od współpasażerów kapitan wysyła RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\} do pozostałych procesesów (tym razem nie oczekując już potwierdzenia). Po czym przechodzi do stanu ON\_SHORE.
 
     \vspace{0.4cm}
     Pozostałe procesy czekają na zakończenie podróży. Po otrzymaniu wiadomości RETURN\_SUBMAR zwalniają swoje miejsca, usuwają z kolejki odpowiednią liczbę procesów, odpowiadają ACK\_TRAVEL i przechodzą do stanu ON\_SHORE.
@@ -365,17 +377,18 @@
     \begin{description}
         \item [REQ\_PONY] proces jest w sekcji krytycznej, więc dodaje nadawcę do kolejki QUEUE\_PONY i nic nie odpowiada. 
         \item [ACK\_PONY] jest już w sekcji krytycznej, więc ignoruje.
-        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR\{id\_łodzi\}.
-        \item [ACK\_SUBMAR\{id\_łodzi\}] niemożliwe, ignoruje.
+        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR.
+        \item [ACK\_SUBMAR] niemożliwe, ignoruje.
         \item [FULL\_SUBMAR\_STAY\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta.
     \end{description}
 \end{frame}
 
 \begin{frame}{TRAVEL - odpowiedzi c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
         \item [FULL\_SUBMAR\_RETREAT\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta oraz usuwa nadawcę z kolejki powiązanej z daną łodzią (QUEUE\_SUBMAR\{id\_łodzi\}).
-        \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki QUEUE\_SUBMAR\{id\_łodzi\}. Jeśli płynie tą łodzią, to dodatkowo zwalnia miejsce na łodzi i wysyła kapitanowi ACK\_TRAVEL.
+        \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki QUEUE\_SUBMAR\{id\_łodzi\}. Jeśli płynie tą łodzią, to dodatkowo zwalnia miejsce na łodzi, odpowiada ACK\_TRAVEL i przechodzi do stanu ON\_SHORE.
         \item [TRAVEL\_READY] niemożliwe, ignoruje.
         \item [ACK\_TRAVEL] jeśli jest kapitanem: postępuje według kroków opisanych wcześniej. Jeśli nie jest kapitanem, wiadomość niemożliwa, ignoruje.
         \item [DEPART\_SUBMAR] niemożliwe, ignoruje.
@@ -384,6 +397,7 @@
 
 \begin{frame}{ON\_SHORE}
     \internallinenumbers
+    \resetlinenumber[1]
     Proces w tym stanie zakończył właśnie podróż, zwolnił jedną sekcję krytyczną (łódź) i zamierza zwolnić kolejną - oddać strój kucyka.
     
     \vspace{0.4cm}
@@ -396,14 +410,15 @@
     \begin{description}
         \item [REQ\_PONY] odpowiada ACK\_PONY.
         \item [ACK\_PONY] jest jeszcze w sekcji krytycznej, więc ignoruje.
-        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR\{id\_łodzi\}.
-        \item [ACK\_SUBMAR\{id\_łodzi\}] niemożliwe, ignoruje.
+        \item [REQ\_SUBMAR\{id\_łodzi\}] dodaje nadawcę do kolejki powiązanej z tą łodzią (QUEUE\_SUBMAR) i odpowiada ACK\_SUBMAR.
+        \item [ACK\_SUBMAR] niemożliwe, ignoruje.
         \item [FULL\_SUBMAR\_STAY\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta.
     \end{description}
 \end{frame}
 
 \begin{frame}{ON\_SHORE - odpowiedzi c.d.}
     \internallinenumbers
+    \resetlinenumber[1]
     \begin{description}
         \item [FULL\_SUBMAR\_RETREAT\{id\_łodzi\}] oznacza na liście LIST\_SUBMAR, że dana łódź jest zajęta oraz usuwa nadawcę z kolejki powiązanej z daną łodzią (QUEUE\_SUBMAR\{id\_łodzi\}).
         \item [RETURN\_SUBMAR\{id\_łodzi, liczba\_pasażerów\}] oznacza łódź jako dostępną (LIST\_SUBMAR) oraz usuwa pierwsze liczba\_pasażerów pozycji z kolejki QUEUE\_SUBMAR\{id\_łodzi\}.
